--- a/app/src/main/res/layout/single_book_activity_layout.xml
+++ b/app/src/main/res/layout/single_book_activity_layout.xml
@@ -1,4 +1,75 @@
-<LinearLayout
+<TabHost
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tabhost"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/numerstrony"
+            android:textSize="15sp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:textStyle="bold"
+            android:background="@color/darkBlueDajSpisac"
+            android:textColor="@color/lightBlueDajSpisac"
+            android:gravity="center_horizontal" />
+        <HorizontalScrollView
+            android:scrollbars="none"
+            android:layout_width="fill_parent" android:layout_height="wrap_content"
+            android:id="@+id/horizontalscrollview">
+            <LinearLayout android:id="@+id/top_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TabWidget
+                android:id="@android:id/tabs"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/lightBlueDajSpisac"/>
+             </LinearLayout>
+        </HorizontalScrollView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/numeryzadan"
+            android:id="@+id/textView"
+            android:textSize="30sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/lightBlueDajSpisac"/>
+
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="0" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPagerSingleBook"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom" />
+
+
+
+    </LinearLayout>
+</TabHost>
+
+
+
+<!--<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,4 +97,4 @@
 
 </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+</LinearLayout>-->
