--- a/app/src/main/res/drawable/tab_background_default.xml
+++ b/app/src/main/res/drawable/tab_background_default.xml
@@ -5,7 +5,8 @@
     <item android:bottom="0dp" android:right="0dp" android:left="0dp" android:top="-1.5dp">
         <shape>
             <solid android:color="@color/darkBlueDajSpisac" />
-            <stroke android:width="1dp" android:color="@color/lightBlueDajSpisac" />
+            <!--<stroke android:width="1dp" android:color="@color/lightBlueDajSpisac" />-->
+
             <corners android:bottomLeftRadius="10dp"
                 android:bottomRightRadius="10dp"/>
         </shape>
