--- a/app/src/main/res/layout-land/tab_mathematics_layout.xml
+++ b/app/src/main/res/layout-land/tab_mathematics_layout.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/darkBlueDajSpisac"
+    android:background="@drawable/tab_background_default"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="5dp"
