--- a/app/src/main/res/layout-land/actionbar_layout_singlebook.xml
+++ b/app/src/main/res/layout-land/actionbar_layout_singlebook.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="40dp"
     android:gravity="center_vertical"
-    android:background="@color/actionBarColor"
-    >
+    android:background="@color/actionBarColor">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -29,7 +30,7 @@
         android:paddingBottom="3dp"
         android:focusable="false"
         android:maxHeight="48dp"
-        android:scaleType="center"/>
+        android:scaleType="center" />
 
     <TextView
         android:layout_width="wrap_content"
