--- a/app/src/main/res/layout-land/choose_class_fragment_layout.xml
+++ b/app/src/main/res/layout-land/choose_class_fragment_layout.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/darkBlueDajSpisac"
-    >
+    android:background="@color/darkBlueDajSpisac">
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -13,6 +14,7 @@
         android:layout_marginBottom="4dp"
         android:paddingRight="10dp"
         android:paddingLeft="10dp">
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="35dp"
@@ -24,8 +26,8 @@
             android:textStyle="bold"
             android:paddingRight="10dp"
             android:layout_weight="1"
-            android:id="@+id/buttonSchoolPrimary"
-            />
+            android:id="@+id/buttonSchoolPrimary" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="35dp"
@@ -53,6 +55,7 @@
         android:layout_marginBottom="7dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="35dp"
@@ -65,6 +68,7 @@
             android:paddingRight="20dp"
             android:layout_weight="1"
             android:id="@+id/buttonKl1" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="35dp"
@@ -77,6 +81,7 @@
             android:paddingRight="20dp"
             android:layout_weight="1"
             android:id="@+id/buttonKl2" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="35dp"
