--- a/app/src/main/res/layout-land/exercise_activity_layout_noclip.xml
+++ b/app/src/main/res/layout-land/exercise_activity_layout_noclip.xml
@@ -1,5 +1,4 @@
-<TabHost
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,8 +9,13 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:id="@+id/relativeContainer">
-        <include layout="@layout/actionbar_layout_singlebook" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true"
-            android:id="@+id/actionBar"/>
+
+        <include
+            layout="@layout/actionbar_layout_singlebook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:id="@+id/actionBar" />
 
         <TextView
             android:layout_width="match_parent"
@@ -26,7 +30,7 @@
             android:background="@color/darkBlueDajSpisac"
             android:textColor="@color/lightBlueDajSpisac"
             android:gravity="center_horizontal"
-            android:layout_below="@id/actionBar"/>
+            android:layout_below="@id/actionBar" />
 
         <FrameLayout
             android:id="@android:id/tabcontent"
@@ -34,14 +38,13 @@
             android:layout_height="0dp"
             android:layout_weight="0" />
 
-        <android.support.v4.view.ViewPager
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/viewPagerSingleExercise"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             android:layout_marginTop="5dp"
-            android:layout_below="@+id/frameCont"/>
+            android:layout_below="@+id/frameCont" />
 
 
         <FrameLayout
@@ -50,18 +53,21 @@
             android:id="@+id/frameCont"
             android:background="@color/darkBlueDajSpisac"
             android:layout_below="@id/tVNrZad">
+
             <HorizontalScrollView
                 android:scrollbars="none"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/horizontalscrollview"
                 android:background="@color/darkBlueDajSpisac"
                 android:layout_gravity="center_horizontal"
                 android:fadingEdgeLength="0dp">
-                <LinearLayout android:id="@+id/top_buttons"
+
+                <LinearLayout
+                    android:id="@+id/top_buttons"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
 
                     <TabWidget
                         android:id="@android:id/tabs"
@@ -69,14 +75,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/darkBlueDajSpisac"
-                        android:showDividers="none"/>
+                        android:showDividers="none" />
                 </LinearLayout>
             </HorizontalScrollView>
         </FrameLayout>
-
-
-
-
 
 
     </RelativeLayout>
