--- a/app/src/main/res/layout-land/tab_chemistry_layout.xml
+++ b/app/src/main/res/layout-land/tab_chemistry_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/tab_background_default_chosen"
     android:paddingLeft="10dp"
@@ -10,12 +11,14 @@
     android:paddingTop="5dp"
     android:gravity="center_horizontal"
     android:longClickable="false">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/twojeksiazki_chemia_blady"
         android:layout_gravity="center_vertical"
         android:id="@+id/imageViewSubjectIcon" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +26,9 @@
         android:textColor="@color/lightBlueDajSpisac"
         android:textStyle="bold"
         android:layout_gravity="center_vertical"
-        android:singleLine="true" android:ellipsize="end" android:lines="1"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:lines="1"
         android:id="@+id/textViewTab" />
 
 </LinearLayout>
