--- a/app/src/main/res/layout/actionbar_layout_singlebook.xml
+++ b/app/src/main/res/layout/actionbar_layout_singlebook.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:gravity="center_vertical"
     android:background="@color/actionBarColor"
-    >
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
+
     <ImageView
+        android:id="@+id/imageViewLeft"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/imageViewLeft"
-        android:src="@drawable/back_losos"
         android:layout_gravity="center_vertical"
         android:paddingLeft="15dp"
-        android:paddingRight="10dp" />
+        android:paddingRight="10dp"
+        android:src="@drawable/back_losos" />
 
     <ImageView
+        android:id="@+id/imageViewRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageViewRight"
-        android:src="@drawable/ic_launcher"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="6dp"
-        android:paddingTop="3dp"
-        android:paddingBottom="3dp"
         android:focusable="false"
         android:maxHeight="48dp"
-        android:scaleType="center"/>
+        android:paddingBottom="3dp"
+        android:paddingTop="3dp"
+        android:scaleType="center"
+        android:src="@drawable/ic_launcher" />
 
     <TextView
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewTitle"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
         android:text="chemia"
         android:textColor="@color/actionbarTitleOrange"
-        android:textSize="20sp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp" />
+        android:textSize="20sp" />
 </LinearLayout>
