--- a/app/src/main/res/layout/choose_class_fragment_layout.xml
+++ b/app/src/main/res/layout/choose_class_fragment_layout.xml
@@ -1,95 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/darkBlueDajSpisac"
-    >
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="4dp"
-                    android:paddingRight="10dp"
-                    android:paddingLeft="10dp">
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:text="@string/podstawowka"
-                        android:textColor="@color/lightBlueDajSpisac"
-                        android:textSize="15sp"
-                        android:background="@drawable/button_background_chooseclassdialog_left"
-                        android:paddingLeft="10dp"
-                        android:textStyle="bold"
-                        android:paddingRight="10dp"
-                        android:layout_weight="1"
-                        android:id="@+id/buttonSchoolPrimary" />
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:text="@string/gimnazjum"
-                        android:textStyle="bold"
-                        android:textColor="@color/lightBlueDajSpisac"
-                        android:background="@drawable/button_background_chooseclassdialog_right"
-                        android:textSize="15sp"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
-                        android:layout_weight="1"
-                        android:id="@+id/buttonSchoolSecondary" />
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+        <Button
+            android:id="@+id/buttonSchoolPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background_chooseclassdialog_left"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/podstawowka"
+            android:textColor="@color/lightBlueDajSpisac"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/buttonSchoolSecondary"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background_chooseclassdialog_right"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="@string/gimnazjum"
+            android:textColor="@color/lightBlueDajSpisac"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
 
-                </LinearLayout>
+    </LinearLayout>
 
 
-            <!--Wybór klasy -->
+    <!--Wybór klasy -->
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="5dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:text="1"
-                        android:textColor="@color/lightBlueDajSpisac"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:background="@drawable/button_background_chooseclassdialog_left"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
-                        android:layout_weight="1"
-                        android:id="@+id/buttonKl1" />
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:text="2"
-                        android:textColor="@color/lightBlueDajSpisac"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:background="@drawable/button_background_chooseclass_dialog_middle"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
-                        android:layout_weight="1"
-                        android:id="@+id/buttonKl2" />
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:text="3"
-                        android:textStyle="bold"
-                        android:textColor="@color/lightBlueDajSpisac"
-                        android:background="@drawable/button_background_chooseclassdialog_right"
-                        android:textSize="15sp"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
-                        android:layout_weight="1"
-                        android:id="@+id/buttonKl3" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+        <Button
+            android:id="@+id/buttonKl1"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background_chooseclassdialog_left"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="1"
+            android:textColor="@color/lightBlueDajSpisac"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/buttonKl2"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background_chooseclass_dialog_middle"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="2"
+            android:textColor="@color/lightBlueDajSpisac"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/buttonKl3"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background_chooseclassdialog_right"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="3"
+            android:textColor="@color/lightBlueDajSpisac"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
 
-                </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
