--- a/app/src/main/res/layout/footer_mybooks_layout.xml
+++ b/app/src/main/res/layout/footer_mybooks_layout.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:background="@drawable/backgorund_footer_mybooks"
-    android:alpha="0.6">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:alpha="0.6"
+    android:background="@drawable/backgorund_footer_mybooks"
+    android:orientation="horizontal">
 
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_gravity="left"
-        android:src="@drawable/twojeksiazki_plus_bialy"
-        android:layout_centerVertical="true"/>
+        android:src="@drawable/twojeksiazki_plus_bialy" />
 
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/dodajkolejnaksiazke"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal"
         android:layout_centerInParent="true"
+        android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="20sp"
         android:paddingBottom="15dp"
-        android:paddingTop="15dp" />
+        android:paddingTop="15dp"
+        android:text="@string/dodajkolejnaksiazke"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
