--- a/app/src/main/res/layout/mybook_single_listview_layout.xml
+++ b/app/src/main/res/layout/mybook_single_listview_layout.xml
@@ -1,74 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/booksLayoutSingleItem"
-        android:orientation="horizontal" android:layout_width="match_parent"
-        android:layout_height="wrap_content" style="@style/SingleItem"
-        android:paddingTop="7dp"
+        style="@style/SingleItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
         android:paddingBottom="7dp"
-        android:layout_weight="1">
+        android:paddingTop="7dp">
 
         <ImageView
+            android:id="@+id/iViewMin"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/iViewMin"
             android:layout_gravity="left"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp" />
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/tVtitle"
-                android:layout_gravity="center_horizontal|left"
-                android:textColor="#19172c"
-                android:textSize="18sp"
-                android:text="teshhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhss"/>
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_gravity="center_horizontal|left"
+                android:text="teshhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhss"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#19172c"
+                android:textSize="18sp" />
+
+            <TextView
                 android:id="@+id/tVAuthor"
-                android:textSize="15sp"
-                android:textColor="@color/lightBlueDajSpisac"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
                 android:text="sasasas"
-                android:layout_gravity="left" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/lightBlueDajSpisac"
+                android:textSize="15sp" />
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/white">
-        <View android:id="@+id/gradientDivider"
-            android:background="@drawable/gradientseperator"
+
+        <View
+            android:id="@+id/gradientDivider"
             android:layout_width="1.5dp"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="@drawable/gradientseperator" />
+
         <Button
             android:id="@+id/buttonAddDeleteBook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/delete_book_buuton"
-            android:minWidth="60dp"
-            android:minHeight="0dp"
             android:layout_gravity="bottom"
-            android:layout_marginRight="4dp"
-            android:layout_marginLeft="4dp"
             android:layout_marginBottom="2dp"
-            android:alpha="0.8"/>
-
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:alpha="0.8"
+            android:background="@drawable/delete_book_buuton"
+            android:minHeight="0dp"
+            android:minWidth="60dp" />
 
 
     </LinearLayout>
