--- a/app/src/main/res/layout/mybooksactivitylayout_noclip.xml
+++ b/app/src/main/res/layout/mybooksactivitylayout_noclip.xml
@@ -15,16 +15,14 @@
             android:id="@android:id/tabcontent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/tabcontent_top_margin"
-            >
+            android:layout_marginTop="@dimen/tabcontent_top_margin">
 
             <android.support.v4.view.ViewPager
 
                 android:id="@+id/viewpager"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                />
+                android:layout_gravity="bottom" />
 
         </FrameLayout>
 
@@ -35,11 +33,14 @@
             android:layout_below="@id/actionBar"
             android:background="@drawable/tab_widget_backgorund"
             android:orientation="horizontal"
-            android:showDividers="none"
-            />
+            android:showDividers="none" />
 
-        <include layout="@layout/actionbar_layout_singlebook" android:layout_width="match_parent" android:layout_height="48dp" android:layout_alignParentTop="true"
-            android:id="@+id/actionBar"/>
+        <include
+            android:id="@+id/actionBar"
+            layout="@layout/actionbar_layout_singlebook"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentTop="true" />
 
     </RelativeLayout>
 
