--- a/app/src/main/res/layout/single_book_activity_layout_noclip.xml
+++ b/app/src/main/res/layout/single_book_activity_layout_noclip.xml
@@ -1,59 +1,67 @@
-<TabHost
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
 
     <RelativeLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
-        <include layout="@layout/actionbar_layout_singlebook" android:layout_width="match_parent" android:layout_height="48dp"
-            android:id="@+id/actionBar" android:layout_alignParentTop="true" />
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/actionBar"
+            layout="@layout/actionbar_layout_singlebook"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentTop="true" />
+
         <TextView
+            android:id="@+id/pageNumTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/numerstrony"
-            android:id="@+id/pageNumTv"
-            android:textSize="15sp"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:textStyle="bold"
-            android:textColor="@color/lightBlueDajSpisac"
+            android:layout_below="@id/actionBar"
             android:background="@color/darkBlueDajSpisac"
             android:gravity="center_horizontal"
-            android:layout_below="@id/actionBar"/>
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:text="@string/numerstrony"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/lightBlueDajSpisac"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/numeryzadan"
-            android:id="@+id/textView"
-            android:textSize="30sp"
-            android:background="@color/lightGrey"
+            android:layout_below="@+id/horizontalscrollview"
             android:layout_gravity="center_horizontal"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/lightBlueDajSpisac"
+            android:background="@color/lightGrey"
             android:gravity="center"
-            android:layout_below="@+id/horizontalscrollview"/>
+            android:paddingBottom="20dp"
+            android:paddingTop="20dp"
+            android:text="@string/numeryzadan"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/lightBlueDajSpisac"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
         <HorizontalScrollView
-            android:scrollbars="none"
-            android:layout_width="fill_parent" android:layout_height="wrap_content"
             android:id="@+id/horizontalscrollview"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/pageNumTv"
-            android:fadingEdgeLength="0dp">
+            android:fadingEdgeLength="0dp"
+            android:scrollbars="none">
+
             <TabWidget
                 android:id="@android:id/tabs"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/darkBlueDajSpisac"
-                android:showDividers="none"/>
+                android:orientation="horizontal"
+                android:showDividers="none" />
         </HorizontalScrollView>
 
 
@@ -67,10 +75,9 @@
                 android:id="@+id/viewPagerSingleBook"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"/>
+                android:layout_gravity="bottom" />
 
         </FrameLayout>
-
 
 
     </RelativeLayout>
