--- a/app/src/main/res/layout/tab_exercise_number_layout.xml
+++ b/app/src/main/res/layout/tab_exercise_number_layout.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/tab_background_default"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
+
     <TextView
+        android:id="@+id/textViewExerciseNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/lightBlueDajSpisac"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:id="@+id/textViewExerciseNumber"
-        android:gravity="center_horizontal"
-        android:text="101"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:minWidth="80dp" />
+        android:gravity="center_horizontal"
+        android:minWidth="80dp"
+        android:text="101"
+        android:textColor="@color/lightBlueDajSpisac"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
