--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,9 @@
 <resources>
 
 
-
     <style name="SingleItem">
-       <item name="android:background">@color/white</item>
-       <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="SingleExerciseButton">
@@ -18,16 +17,9 @@
         <item name="android:textSize">40dp</item>
 
 
-
     </style>
 
-    <style name="DajSpisacTheme" parent="android:Theme.Light.NoTitleBar">
-        <!--<item name="android:panelFullBackground">@color/actionBarColor</item>
-        <item name="android:panelBackground">@color/actionBarColor</item>
-        <item name="android:panelColorBackground">@color/actionBarColor</item>
-        <item name="android:itemBackground">@color/actionBarColor</item>
-        <item name="android:itemTextAppearance">@style/TextAppearance</item>-->
-    </style>
+    <style name="DajSpisacTheme" parent="android:Theme.Light.NoTitleBar"></style>
 
     <style name="TextAppearance">
         <item name="android:textColor">@color/orangeDajSpisac</item>
@@ -44,7 +36,6 @@
         <item name="android:textColor">@color/lightBlueDajSpisac</item>
         <item name="android:textStyle">bold</item>
     </style>
-
 
 
 </resources>
