--- a/app/src/main/res/layout/exercise_activity_layout_noclip.xml
+++ b/app/src/main/res/layout/exercise_activity_layout_noclip.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        xmlns:ads="http://schemas.android.com/apk/res-auto">
 
         <include
             android:id="@+id/actionBar"
@@ -45,7 +46,8 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/frameCont"
             android:layout_marginTop="5dp"
-            android:background="@color/white" />
+            android:background="@color/white"
+            android:layout_above="@+id/adView"/>
 
 
         <FrameLayout
@@ -61,8 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="@color/darkBlueDajSpisac"
-                android:fadingEdgeLength="0dp"
-                android:scrollbars="none">
+                android:scrollbars="none"
+                android:fadingEdgeLength="0dp">
 
                 <LinearLayout
                     android:id="@+id/top_buttons"
@@ -83,5 +85,12 @@
         </FrameLayout>
 
 
+
+        <com.google.android.gms.ads.AdView android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            ads:adUnitId="ca-app-pub-7235212965293571/2631947538"
+            ads:adSize="BANNER"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </TabHost>
