--- a/app/src/main/res/layout/mybooksactivitylayout.xml
+++ b/app/src/main/res/layout/mybooksactivitylayout.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:clipChildren="false">
+        android:clipChildren="false"
+        xmlns:ads="http://schemas.android.com/apk/res-auto">
 
 
         <FrameLayout
@@ -47,43 +48,54 @@
             android:layout_height="48dp"
             android:layout_alignParentTop="true" />
 
-    </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/addBookLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="0.5dp"
-        android:layout_marginLeft="0.5dp"
-        android:layout_marginRight="0.5dp"
-        android:alpha="0.7"
-        android:background="@drawable/backgorund_footer_mybooks"
-        android:clipChildren="false"
-        android:visibility="visible">
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_gravity="left"
-            android:src="@drawable/twojeksiazki_plus_bialy" />
-
-
-        <TextView
-            android:id="@+id/textView"
+        <RelativeLayout
+            android:id="@+id/addBookLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp"
-            android:text="@string/dodajkolejnaksiazke"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="0.5dp"
+            android:layout_marginLeft="0.5dp"
+            android:layout_marginRight="0.5dp"
+            android:layout_above="@+id/adView"
+            android:alpha="0.7"
+            android:background="@drawable/backgorund_footer_mybooks"
+            android:clipChildren="false"
+            android:visibility="visible">
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="left"
+                android:src="@drawable/twojeksiazki_plus_bialy" />
+
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:paddingBottom="15dp"
+                android:paddingTop="15dp"
+                android:text="@string/dodajkolejnaksiazke"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+        <com.google.android.gms.ads.AdView android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            ads:adUnitId="ca-app-pub-7235212965293571/2631947538"
+            ads:adSize="BANNER"
+            android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
+
+
 </TabHost>
