--- a/app/src/main/res/layout-land/exercise_activity_layout_noclip.xml
+++ b/app/src/main/res/layout-land/exercise_activity_layout_noclip.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:id="@+id/relativeContainer">
+        android:id="@+id/relativeContainer"
+        xmlns:ads="http://schemas.android.com/apk/res-auto">
 
         <include
             layout="@layout/actionbar_layout_singlebook"
@@ -44,7 +45,8 @@
             android:layout_height="match_parent"
             android:background="@color/white"
             android:layout_marginTop="5dp"
-            android:layout_below="@+id/frameCont" />
+            android:layout_below="@+id/frameCont"
+            android:layout_above="@+id/adView"/>
 
 
         <FrameLayout
@@ -81,5 +83,11 @@
         </FrameLayout>
 
 
+        <com.google.android.gms.ads.AdView android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            ads:adUnitId="ca-app-pub-7235212965293571/2631947538"
+            ads:adSize="BANNER"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </TabHost>
