--- a/app/src/main/res/layout-land/exercise_activity_fragment_layout.xml
+++ b/app/src/main/res/layout-land/exercise_activity_fragment_layout.xml
@@ -40,10 +40,9 @@
             android:alpha="0.5"
             android:background="@color/darkGrey"
             android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:visibility="gone" />
+            android:paddingRight="15dp" />
 
-        <WebView xmlns:android="http://schemas.android.com/apk/res/android"
+        <WebView
             android:id="@+id/webViewTresc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
